# CodeReviewAI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  README_TW.md  README_ZH.md  README_ZHTW.md  action.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codereview-ai.yml  test.yml
codereviewai/: __init__.py  cli.py  config.py  formatter.py  git_diff.py  llm_client.py  reviewer.py
codereviewai/providers/: __init__.py  base.py  claude.py  openai.py
src/: config.ts  engine.ts  index.ts  types.ts
src/analyzers/: static.ts
src/providers/: anthropic.ts  factory.ts  gemini.ts  ollama.ts  openai.ts
src/services/: github.ts
src/utils/: diff-parser.ts  logger.ts  prompt-builder.ts  response-parser.ts
tests/: test_config.py  test_formatter.py
