[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codereviewai"
version = "1.0.0"
description = "轻量级AI驱动的代码审查CLI工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CodeReviewAI Team", email = "hello@codereviewai.dev"}
]
keywords = ["code-review", "ai", "cli", "git", "llm", "openai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
codereviewai = "codereviewai.cli:main"
crai = "codereviewai.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/codereviewai"
Repository = "https://github.com/gitstq/codereviewai"
Documentation = "https://github.com/gitstq/codereviewai#readme"
Issues = "https://github.com/gitstq/codereviewai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codereviewai*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=codereviewai --cov-report=term-missing --cov-report=html"
